--- a/PassportApplication/PassportApplication/frontend/passport_app/package.json
+++ b/PassportApplication/PassportApplication/frontend/passport_app/package.json
@@ -21,6 +21,8 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "lobibox": "^1.2.7",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.12.3",
     "tslib": "^2.3.0",
